unpackaged/main/default/objects/Refund/Refund.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>