unpackaged/main/default/objects/Refund/fields/IsGlobalE__c.field-meta.xml
<CustomField>
    <fullName>IsGlobalE__c</fullName>
    <formula>OrderPaymentSummary.OrderSummary.IsGlobalE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsGlobalE</label>
    <type>Checkbox</type>
</CustomField>