unpackaged/main/default/objects/Refund/fields/OrderPaymentSummaryType__c.field-meta.xml
<CustomField>
    <fullName>OrderPaymentSummaryType__c</fullName>
    <formula>OrderPaymentSummary.Type</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Payment Summary Type</label>
    <type>Text</type>
</CustomField>