unpackaged/main/default/objects/Refund/fields/PE_was_identified__c.field-meta.xml
<CustomField>
    <fullName>PE_was_identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PE was identified</label>
    <type>Checkbox</type>
</CustomField>