unpackaged/main/default/objects/Refund/fields/RefundedBy__c.field-meta.xml
<CustomField>
    <fullName>RefundedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refunded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>