unpackaged/main/default/objects/Refund/fields/RefundedItems__c.field-meta.xml
<CustomField>
    <fullName>RefundedItems__c</fullName>
    <label>Refunded Items</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>