unpackaged/main/default/objects/Refund/fields/RefundMethod__c.field-meta.xml
<CustomField>
    <fullName>RefundMethod__c</fullName>
    <label>Refund Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Klarna</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>No Payment</fullName>
            </value>
            <value>
                <fullName>KCP_ACC</fullName>
            </value>
            <value>
                <fullName>KAKAO PAY</fullName>
            </value>
            <value>
                <fullName>KCP_RBT</fullName>
            </value>
            <value>
                <fullName>IDEAL</fullName>
            </value>
            <value>
                <fullName>PIX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>