unpackaged/main/default/objects/Refund/fields/RefundOrigin__c.field-meta.xml
<CustomField>
    <fullName>RefundOrigin__c</fullName>
    <label>Refund Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial Cancelation</fullName>
            </value>
            <value>
                <fullName>Full Cancelation</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Appeasement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>