unpackaged/main/default/objects/Refund/fields/Tech_AutomaticRefund_Button__c.field-meta.xml
<CustomField>
    <fullName>Tech_AutomaticRefund_Button__c</fullName>
    <formula>OR(
  OrderPaymentSummaryType__c = &quot;PIX&quot;,
  CONTAINS(OrderPaymentSummaryType__c, &quot;IDEAL&quot;),
  CONTAINS(OrderPaymentSummaryType__c, &quot;KCB_RBT&quot;),
  CONTAINS(OrderPaymentSummaryType__c, &quot;KCB_ACC&quot;),
  CONTAINS(OrderPaymentSummaryType__c, &quot;Klarna&quot;),
  CONTAINS(OrderPaymentSummaryType__c, &quot;PAYPAL&quot;),
  CONTAINS(OrderPaymentSummaryType__c, &quot;APPLE_PAY&quot;),
  OrderPaymentSummaryType__c = &quot;Credit Card&quot;,
  OrderPaymentSummaryType__c = &quot;Amex&quot;,
  OrderPaymentSummaryType__c = &quot;Visa&quot;,
  OrderPaymentSummaryType__c = &quot;MasterCard&quot;,
  OrderPaymentSummaryType__c = &quot;ELO&quot;,
  OrderPaymentSummaryType__c = &quot;JCB&quot;,
  OrderPaymentSummaryType__c = &quot;DinersClub&quot;,
  OrderPaymentSummaryType__c = &quot;Discover&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_AutomaticRefund_Button</label>
    <type>Checkbox</type>
</CustomField>