unpackaged/main/default/objects/Refund/fields/ValidationDate__c.field-meta.xml
<CustomField>
    <fullName>ValidationDate__c</fullName>
    <label>Validation Date</label>
    <type>DateTime</type>
</CustomField>